<?xml version="1.0"?>
<package>
  <name>robust_equilibrium_lib_catkin</name>
  <version>0.1.0</version>
  <description>catkin wrapper for the robust-equilibrium-lib</description>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/wxmerkt/robust_equilibrium_lib_catkin</url>
  <url type="bugtracker">https://github.com/wxmerkt/robust_equilibrium_lib_catkin/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libccd-dev</build_depend>
  <run_depend>libccd-dev</run_depend>
  <build_depend>qpoases_catkin</build_depend>
  <run_depend>qpoases_catkin</run_depend>
  <export/>
</package>